--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
      <Compile Include="Assets\Scripts\PC_Controller.cs" />
      <Compile Include="Assets\Scripts\PC_UI.cs" />
      <Compile Include="Assets\Scripts\Plays\PLY_Controller.cs" />
+     <Compile Include="Assets\Scripts\Plays\PLY_SnapSpot.cs" />
      <Compile Include="Assets\Scripts\PROJ_Football.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_ClickHandler.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Mouse.cs" />
@@ -83,6 +84,7 @@
      <Compile Include="Assets\Scripts\Utilities\SingletonBehaviour.cs" />
      <None Include="Assets\Plays\FakePlay.txt" />
      <None Include="Assets\Plays\OtherFakePlay.txt" />
+     <None Include="Assets\Plays\DefaultPlay.txt" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>C:/Programming/SW_Quarterback/SW_Quarterback/SW_Football/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
