--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -56,9 +56,11 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\AI\AI_MovingTarget.cs" />
+     <Compile Include="Assets\Scripts\AI\AI_Receiver.cs" />
      <Compile Include="Assets\Scripts\AI\AI_Route.cs" />
      <Compile Include="Assets\Scripts\AI\AI_RouteFollow.cs" />
      <Compile Include="Assets\Scripts\AI\AI_RouteNode.cs" />
+     <Compile Include="Assets\Scripts\AI\AI_Target.cs" />
      <Compile Include="Assets\Scripts\Audio\AD_Manager.cs" />
      <Compile Include="Assets\Scripts\Audio\AUD_Snd.cs" />
      <Compile Include="Assets\Scripts\DT_Types\SO_Bool.cs" />
@@ -87,6 +89,7 @@
      <Compile Include="Assets\Scripts\Utilities\UT_Strings.cs" />
      <None Include="Assets\Plays\FakePlay.txt" />
      <None Include="Assets\Plays\OtherFakePlay.txt" />
+     <None Include="Assets\Plays\play01.txt" />
      <None Include="Assets\Plays\DefaultPlay.txt" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>C:/Programming/SW_Quarterback/SW_Quarterback/SW_Football/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
