--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -77,11 +77,11 @@
      <Compile Include="Assets\Scripts\Plays\PLY_Controller.cs" />
      <Compile Include="Assets\Scripts\Plays\PLY_SnapSpot.cs" />
      <Compile Include="Assets\Scripts\PROJ_Football.cs" />
-     <Compile Include="Assets\Scripts\RT_Editor\RT_ClickHandler.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Mouse.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_NewRoute.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Player.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_PlayerManager.cs" />
+     <Compile Include="Assets\Scripts\RT_Editor\RT_RouteCreator.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_SceneManager.cs" />
      <Compile Include="Assets\Scripts\SO_Data\DT_Player.cs" />
      <Compile Include="Assets\Scripts\TEMP_FileStoring.cs" />
