--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
      <Compile Include="Assets\Scripts\AI\AI_RouteFollow.cs" />
      <Compile Include="Assets\Scripts\AI\AI_RouteNode.cs" />
      <Compile Include="Assets\Scripts\AI\AI_Target.cs" />
+     <Compile Include="Assets\Scripts\AI\AI_ZoneDefence.cs" />
      <Compile Include="Assets\Scripts\Audio\AD_Manager.cs" />
      <Compile Include="Assets\Scripts\Audio\AUD_Snd.cs" />
      <Compile Include="Assets\Scripts\DT_Types\SO_Bool.cs" />
