--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -105,16 +105,21 @@
      <None Include="Assets\Plays\EditorCreatedPlays\Cover3Beater.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\DoubleSmash.txt" />
      <None Include="Assets\Plays\stick.txt" />
+     <None Include="Assets\Plays\EditorCreatedPlays\Smash_01.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\sdf.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\whatevs.txt" />
+     <None Include="Assets\Plays\EditorCreatedPlays\Sail_02.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TestingAbain.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGBABY.txt" />
      <None Include="Assets\Scripts\DT_Types\SO_Vec3.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testd.txt" />
      <None Include="Assets\Plays\FakePlay.txt" />
      <None Include="Assets\Plays\OtherFakePlay.txt" />
+     <None Include="Assets\Plays\EditorCreatedPlays\Sail_01.txt" />
      <None Include="Assets\Plays\play01.txt" />
+     <None Include="Assets\Plays\EditorCreatedPlays\Stick_02.txt" />
      <None Include="Assets\Plays\Defense\Cover2.txt" />
+     <None Include="Assets\Plays\EditorCreatedPlays\Smash.txt" />
      <None Include="Assets\Plays\DefaultPlay.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TestCov3Beat.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\RandoPlay.txt" />
@@ -122,7 +127,10 @@
      <None Include="Assets\Plays\EditorCreatedPlays\Testasdlkfj.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGWhatevs.txt" />
      <None Include="Assets\Plays\cross.txt" />
+     <None Include="Assets\Plays\EditorCreatedPlays\Stick_03.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\adsfdas.txt" />
+     <None Include="Assets\Plays\EditorCreatedPlays\Smash2.txt" />
+     <None Include="Assets\Plays\EditorCreatedPlays\Stick_01.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\HB_Wheel.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\HulkSmash.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testsdl.txt" />
