--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -55,9 +55,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\AI\AI_Acc.cs" />
      <Compile Include="Assets\Scripts\AI\AI_Athlete.cs" />
      <Compile Include="Assets\Scripts\AI\AI_Blocker.cs" />
-     <Compile Include="Assets\Scripts\AI\AI_Burst.cs" />
+     <Compile Include="Assets\Scripts\AI\AI_ImpactManager.cs" />
      <Compile Include="Assets\Scripts\AI\AI_MovingTarget.cs" />
      <Compile Include="Assets\Scripts\AI\AI_Receiver.cs" />
      <Compile Include="Assets\Scripts\AI\AI_Route.cs" />
