--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -91,6 +91,11 @@
      <Compile Include="Assets\Scripts\Plays\PLY_Controller.cs" />
      <Compile Include="Assets\Scripts\Plays\PLY_FirstDownMark.cs" />
      <Compile Include="Assets\Scripts\Plays\PLY_SnapSpot.cs" />
+     <Compile Include="Assets\Scripts\PP\PP_Manager.cs" />
+     <Compile Include="Assets\Scripts\PP\PP_Projectile.cs" />
+     <Compile Include="Assets\Scripts\PP\PP_Target.cs" />
+     <Compile Include="Assets\Scripts\PP\PP_Turret.cs" />
+     <Compile Include="Assets\Scripts\PP\PP_UI.cs" />
      <Compile Include="Assets\Scripts\PROJ_Football.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Field.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Mouse.cs" />
