--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -95,10 +95,13 @@
      <Compile Include="Assets\Scripts\PC_ThrowTrajectory.cs" />
      <Compile Include="Assets\Scripts\PC_UI.cs" />
      <Compile Include="Assets\Scripts\Play Editor\DT_OffencePlay.cs" />
+     <Compile Include="Assets\Scripts\Play Editor\PE_Choosable.cs" />
+     <Compile Include="Assets\Scripts\Play Editor\PE_Editor.cs" />
      <Compile Include="Assets\Scripts\Play Editor\PE_Field.cs" />
      <Compile Include="Assets\Scripts\Play Editor\PE_PlayLoader.cs" />
      <Compile Include="Assets\Scripts\Play Editor\PE_PlaySaver.cs" />
      <Compile Include="Assets\Scripts\Play Editor\PE_Role.cs" />
+     <Compile Include="Assets\Scripts\Play Editor\PE_Selector.cs" />
      <Compile Include="Assets\Scripts\Play Editor\PE_SN_Manager.cs" />
      <Compile Include="Assets\Scripts\Plays\HACK_PlyControl.cs" />
      <Compile Include="Assets\Scripts\Plays\PLY_Controller.cs" />
