--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -94,8 +94,12 @@
      <Compile Include="Assets\Scripts\PC_Controller.cs" />
      <Compile Include="Assets\Scripts\PC_ThrowTrajectory.cs" />
      <Compile Include="Assets\Scripts\PC_UI.cs" />
+     <Compile Include="Assets\Scripts\Play Editor\DATA_Play.cs" />
+     <Compile Include="Assets\Scripts\Play Editor\DATA_Route.cs" />
      <Compile Include="Assets\Scripts\Play Editor\DT_OffencePlay.cs" />
      <Compile Include="Assets\Scripts\Play Editor\IO_BinaryTest.cs" />
+     <Compile Include="Assets\Scripts\Play Editor\IO_PlayList.cs" />
+     <Compile Include="Assets\Scripts\Play Editor\IO_RouteList.cs" />
      <Compile Include="Assets\Scripts\Play Editor\PE_Choosable.cs" />
      <Compile Include="Assets\Scripts\Play Editor\PE_Editor.cs" />
      <Compile Include="Assets\Scripts\Play Editor\PE_Field.cs" />
@@ -152,10 +156,8 @@
      <Compile Include="Assets\Scripts\Utilities\UT_Extensions.cs" />
      <Compile Include="Assets\Scripts\Utilities\UT_Grounded.cs" />
      <Compile Include="Assets\Scripts\Utilities\UT_Strings.cs" />
-     <None Include="Assets\Plays\HulkSmash.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Cover3Beater.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\DoubleSmash.txt" />
-     <None Include="Assets\Plays\stick.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash_01.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\sdf.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\whatevs.txt" />
@@ -164,22 +166,17 @@
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGBABY.txt" />
      <None Include="Assets\Scripts\DT_Types\SO_Vec3.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testd.txt" />
-     <None Include="Assets\Plays\FakePlay.txt" />
-     <None Include="Assets\Plays\OtherFakePlay.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Sail_01.txt" />
-     <None Include="Assets\Plays\play01.txt" />
      <None Include="Assets\Plays\Defense\Cover3.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_02.txt" />
      <None Include="Assets\Plays\Defense\Cover2.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash.txt" />
-     <None Include="Assets\Plays\DefaultPlay.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Rando_01.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TestCov3Beat.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\RandoPlay.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\temptla.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testasdlkfj.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGWhatevs.txt" />
-     <None Include="Assets\Plays\cross.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_03.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\adsfdas.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash2.txt" />
