--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -134,6 +134,8 @@
      <Compile Include="Assets\Scripts\PP\PP_Trophy.cs" />
      <Compile Include="Assets\Scripts\PP\PP_Turret.cs" />
      <Compile Include="Assets\Scripts\PP\PP_UI.cs" />
+     <Compile Include="Assets\Scripts\Practice\PRAC_Ath.cs" />
+     <Compile Include="Assets\Scripts\Practice\PRAC_Man.cs" />
      <Compile Include="Assets\Scripts\PROJ_Football.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Field.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Mouse.cs" />
