--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -93,7 +93,6 @@
      <Compile Include="Assets\Scripts\PC_Camera.cs" />
      <Compile Include="Assets\Scripts\PC_Controller.cs" />
      <Compile Include="Assets\Scripts\PC_ThrowTrajectory.cs" />
-     <Compile Include="Assets\Scripts\PC_UI.cs" />
      <Compile Include="Assets\Scripts\Play Editor\DATA_Play.cs" />
      <Compile Include="Assets\Scripts\Play Editor\DATA_Route.cs" />
      <Compile Include="Assets\Scripts\Play Editor\IO_BinaryTest.cs" />
@@ -137,6 +136,7 @@
      <Compile Include="Assets\Scripts\Practice\PRAC_Ath.cs" />
      <Compile Include="Assets\Scripts\Practice\PRAC_Man.cs" />
      <Compile Include="Assets\Scripts\PROJ_Football.cs" />
+     <Compile Include="Assets\Scripts\QB_UI.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Field.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Mouse.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_NewRoute.cs" />
